--- a/notes/calculus-of-variations/optimality-criteria.html
+++ b/notes/calculus-of-variations/optimality-criteria.html
@@ -15,7 +15,7 @@
             MathJax.Hub.Config({ extensions: ["tex2jax.js"], jax: ["input/TeX", "output/HTML-CSS"], tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], displayMath: [ ['$$','$$'], ["\\[","\\]"] ], processEscapes: true }, "HTML-CSS": { availableFonts: ["TeX"] } });
         </script>
         
-        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
         
         <style>
             html, body, h1, h2, h3, h4, h5, h6 {font-family: "Roboto", sans-serif;}
